--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Tea Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3aec6ae694.js" crossorigin="anonymous"></script>
     <script>
         tailwind.config = {
           theme: {
@@ -17,13 +21,84 @@
           }
         }
       </script>
+      <style>
+        .man-rope{
+          font-family: 'Manrope', sans-serif;
+        }
+      </style>
 </head>
-<body>
+<body class="man-rope">
     <header>
-
+      <nav class="container mx-auto">
+        <div class="hero">
+          <div class="hero-content flex-col lg:flex-row">
+            <div>
+              <h1 class="text-7xl font-extrabold">
+                It's good <br>
+                tea time at The <br>
+                Tea House
+              </h1>
+              <p class="py-6 text-lg">
+                Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+              </p>
+              <button class="btn btn-primary">Explore Me</button>
+            </div>
+            <div>
+              <img src="./images/banner.png" class="max-w-sm" />
+              <div class="flex items-center gap-5 drop-shadow-lg bg-white rounded-lg p-5 w-60 -mt-16">
+                <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                <div>
+                  <h3 class="text-3xl">5.0</h3>
+                  <p>Trust Pilot Rationg</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main>
+    <main class="container mx-auto">
+        <section class="text-center my-24">
+          <h2 class="text-5xl font-extrabold mb-5">
+            Our Featured Products
+          </h2>
+          <p class="lg:max-w-3xl mx-auto mb-10">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+          </p>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+              <figure><img src="./images/tea-1.png" alt="Shoes" class="" /></figure>
+              <div class="card-body text-center">
+                <h2 class="text-2xl font-bold">Milk Tea</h2>
+                <p>Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
 
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+              <figure><img src="./images/tea-2.png" alt="Shoes" class="" /></figure>
+              <div class="card-body text-center">
+                <h2 class="text-2xl font-bold">Black Tea</h2>
+                <p>Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+              <figure><img src="./images/tea-3.png" alt="Shoes" class="" /></figure>
+              <div class="card-body text-center">
+                <h2 class="text-2xl font-bold">Lemon Tea</h2>
+                <p>Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+              <figure><img src="./images/tea-4.png" alt="Shoes" class="" /></figure>
+              <div class="card-body text-center">
+                <h2 class="text-2xl font-bold">Green Tea</h2>
+                <p>Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <footer>
 
