--- a/index.html
+++ b/index.html
@@ -131,6 +131,25 @@
             </p>
           </div>
         </section>
+        <section class="flex flex-col lg:flex-row gap-12 my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+          <div class="space-y-5">
+            <h2 class="text-5xl font-extrabold text-white">
+              Meet Our Super <br> Clients
+            </h2>
+            <p class="text-white">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+            </p>
+            <button>Show All</button>
+          </div>
+          <div class="p-10 rounded-lg bg-white relative">
+            <img src="./images/client.png" class="absolute -left-5 -top-5" alt="">
+            <p>
+              We are providing the best and suitable home insurance services for the people who are interested to treatment
+            </p>
+            <h4 class="font-bold">Ilham Yuda</h4>
+            <p class="font-medium">Businessman</p>
+          </div>
+        </section>
     </main>
     <footer>
 
