--- a/index.html
+++ b/index.html
@@ -132,22 +132,53 @@
           </div>
         </section>
         <section class="flex flex-col lg:flex-row gap-12 my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
-          <div class="space-y-5">
-            <h2 class="text-5xl font-extrabold text-white">
-              Meet Our Super <br> Clients
-            </h2>
-            <p class="text-white">
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
-            </p>
-            <button>Show All</button>
+          <div class="flex items-center lg:pr-28">
+            <div class="space-y-5">
+              <h2 class="text-5xl font-extrabold text-white">
+                Meet Our Super <br> Clients
+              </h2>
+              <p class="text-white">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+              </p>
+              <button class="btn btn-primary">Show All</button>
+            </div>
           </div>
-          <div class="p-10 rounded-lg bg-white relative">
-            <img src="./images/client.png" class="absolute -left-5 -top-5" alt="">
-            <p>
-              We are providing the best and suitable home insurance services for the people who are interested to treatment
-            </p>
-            <h4 class="font-bold">Ilham Yuda</h4>
-            <p class="font-medium">Businessman</p>
+          <div class="relative">
+            <div class="p-10 mb-16 rounded-lg bg-white relative opacity-40 z-10">
+              <img src="./images/client.png" class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white" alt="">
+              <p>
+                We are providing the best and suitable home insurance services for the people who are interested to treatment
+              </p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" class="" alt="">
+              </div>
+            </div>
+
+            <div class="p-10 rounded-lg bg-white absolute top-40 lg:-left-32 lg:w-[430px] z-20">
+              <img src="./images/client.png" class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white" alt="">
+              <p>
+                We are providing the best and suitable home insurance services for the people who are interested to treatment
+              </p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" class="" alt="">
+              </div>
+            </div>
+
+            <div class="p-10 rounded-lg bg-white relative opacity-40 z-10">
+              <img src="./images/client.png" class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white" alt="">
+              <p>
+                We are providing the best and suitable home insurance services for the people who are interested to treatment
+              </p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" class="" alt="">
+              </div>
+            </div>
           </div>
         </section>
     </main>
