--- a/index.html
+++ b/index.html
@@ -181,6 +181,45 @@
             </div>
           </div>
         </section>
+        <section class="my-24">
+          <h2 class="text-5xl font-extrabold mb-5 text-center">
+            News & Events
+          </h2>
+          <p class="lg:max-w-3xl mx-auto mb-10 text-[#777]">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+          </p>
+          <div class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-5">
+            <div class="card card-compact bg-base-100 shadow-xl border-2 border-[#D2D2D2] py-5">
+              <figure><img src="./images/news-1.png" alt="collections" /></figure>
+              <div class="card-body ml-5">
+                <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                <h2 class="text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                <p class="font-medium text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                <h4 class="font-bold">Learn More</h4>
+              </div>
+            </div>
+          
+            <div class="card card-compact bg-base-100 shadow-xl border-2 border-[#D2D2D2] py-5">
+              <figure><img src="./images/news-2.png" alt="collections" /></figure>
+              <div class="card-body ml-5">
+                <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                <h2 class="text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                <p class="font-medium text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                <h4 class="font-bold">Learn More</h4>
+              </div>
+            </div>
+
+            <div class="card card-compact bg-base-100 shadow-xl border-2 border-[#D2D2D2] py-5">
+              <figure><img src="./images/news-3.png" alt="collections" /></figure>
+              <div class="card-body ml-5">
+                <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                <h2 class="text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                <p class="font-medium text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                <h4 class="font-bold">Learn More</h4>
+              </div>
+            </div>
+          </div> 
+        </section>
     </main>
     <footer>
 
